	    effect is nonetheless improved.
	- replaced "shaded" option by "shadedHorizontal" and "shadedVertical".
	   For the moment it seems vertical shading is much more rapid (of
	   course, much less gradient steps to calculate in KPixmap).
                - small bugfix to allow runtime switching between vertical and horizontal (Matthias)
  
patchlevel 8:
        - WindowResizeType=Opaque improved. No more flickering and a 
            bit faster. Still not perfect in combination with horizontal shading. 

patchlevel 7:
        - Some new properties for the kwmrc:

                [Decoration]
                noDecorationTitles=,
                tinyDecorationTitles=,
                noDecorationClasses=,
                tinyDecorationClasses=,
	[Focus]
	noFocusTitles=,
	noFocusClasses=,

            Each property allows you to specify a comma separated list
            of regular expressions. A window whose title or class
            matches a specified expression will be decorated appropriately. 
            Note: these hints only affect NEW windows. Do not forget to 
            call "kwmcom configure" or to restart kwm after you changed the
            kwmrc file.

        - cleanups and performance improvements for horziontal shading 
           and titlebar animation 

patchlevel 6:
        - horizontal shading (blending) a la kpixmap
        - fixed motif decoration hint handling. Useful for the fullscreen view
           of the acrobat reader.
 
patchlevel 5:
        - no more harecoded "Helvetica" font. kwm uses the generalFont instead.
        - two new focus policies: CLASSIC_FOCUS_FOLLOWS_MOUSE and
           CLASSIC_SLOPPY_FOCUS. Both break the fancy Alt-Tab feature as well as
           the "switch-to"-function in the taskmanager/taskbar. Anyway, old hand twm
           fans seems unable to live without _true_ focus follows mouse :-) 
        - changed autoraise semantics: autoraise only works when the pointer is 